--- a/index.css
+++ b/index.css
@@ -91,6 +91,7 @@ main
 	align-items: center;
 	justify-content: center;
 	flex-direction: column;
+	overflow-x: hidden;
 }
 main > section
 {
